# text-classifier

./: .gitignore  README.md  classifier.ipynb  pyproject.toml
